fx : ajout bouton recommencer et amelioration design

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,8 @@
 <body>
     <h1>Jeu Pong</h1>
     <h4 id="Score">Score  en seconde</h4>
-    <canvas id="canvas" height="500px"; width="350"></canvas>
+    <canvas id="canvas" height="480px"; width="350"></canvas>
+    <div id = "Recommencer"><button id="Recommencer">Recommencer</button></div>
     <div class="controls">
     <button id="pauseBtn">Pause</button>
     </div>
