--- a/index.htm
+++ b/index.htm
@@ -13,11 +13,9 @@
     <canvas id="canvas" height="480px"; width="350"></canvas>
     <div id = "Recommencer"><button id="Recommencer">Recommencer</button></div>
     <div class="controls">
+    <div class="arrow"> <i class="fa-solid fa-arrow-left"></i></div>
     <button id="pauseBtn">Pause</button>
-    </div>
-    <div class="arrow">
-        <i class="fa-solid fa-arrow-left"></i>
-        <i class="fa-solid fa-arrow-right"></i>
+    <div class="arrow"><i class="fa-solid fa-arrow-right"></i></div>
     </div>
     
     <script src="script.js"></script>
