--- a/index.htm
+++ b/index.htm
@@ -13,9 +13,11 @@
     <canvas id="canvas" height="480px"; width="350"></canvas>
     <div id = "Recommencer"><button id="Recommencer">Recommencer</button></div>
     <div class="controls">
-    <i class="fa-solid fa-arrow-left"></i>
     <button id="pauseBtn">Pause</button>
-    <i class="fa-solid fa-arrow-right"></i>
+    </div>
+    <div class="arrow">
+        <i class="fa-solid fa-arrow-left"></i>
+        <i class="fa-solid fa-arrow-right"></i>
     </div>
     
     <script src="script.js"></script>
