fx:correction et test w3c

--- a/index.htm
+++ b/index.htm
@@ -9,15 +9,16 @@
 </head>
 <body>
     <h1>Jeu Pong</h1>
-    <h4 id="Score">Score  en seconde</h4>
-    <canvas id="canvas" height="480px"; width="350"></canvas>
-    <div id = "Recommencer"><button id="Recommencer">Recommencer</button></div>
+    <h2>But du jeu : Ne pas laisser la balle toucher le bas de l'écran</h2>
+    <canvas id="canvas" height="480" width="350"></canvas>
+    <h3 id="Score">Score  en seconde</h3>
+    <button id="Recommencer">Recommencer</button>
     <div class="controls">
     <button id="pauseBtn">Pause</button>
     </div>
     <div class="arrow">
-        <i class="fa-solid fa-arrow-left"></i>
-        <i class="fa-solid fa-arrow-right"></i>
+        <em class="fa-solid fa-arrow-left"></em>
+        <em class="fa-solid fa-arrow-right"></em>
     </div>
     
     <script src="script.js"></script>
